--- a/src/styles/counter.css
+++ b/src/styles/counter.css
@@ -7,6 +7,14 @@
     margin-right: 20px;
 }
 
+.decrement10-btn,.increment10-btn{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    color: white;
+    background-color: black;
+}
+
 .decrement-btn{
     display: inline-block;
     width: 50px;
